--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "devDependencies": {
     "webpack": "^5.55.1",
     "webpack-cli": "^4.8.0"
+  },
+  "dependencies": {
+    "css-loader": "^6.4.0",
+    "style-loader": "^3.3.0"
   }
 }
